--- a/infrastructure/vpc/vpc.yaml
+++ b/infrastructure/vpc/vpc.yaml
@@ -1,1 +1,108 @@
 Description: High availability VPC - Staging/Production
+AWSTemplateFormatVersion: 2010-09-09
+Resources:
+  ProdVPC:
+    Type: 'AWS::EC2::VPC'
+    Properties:
+      CidrBlock: 10.50.0.0/16
+    
+  StagingVPC:
+    Type: 'AWS::EC2::VPC'
+    Properties:
+      CidrBlock: 10.5.0.0/16
+    
+  ProdPublic1:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+      VpcId: !Ref ProdVPC
+      AvailabilityZone: us-east-1a
+      CidrBlock: 10.50.1.0/24
+      MapPublicIpOnLaunch: true
+    
+  ProdPublic2:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+      VpcId: !Ref ProdVPC
+      AvailabilityZone: us-east-1b
+      CidrBlock: 10.50.2.0/24
+      MapPublicIpOnLaunch: true
+    
+  ProdPublic3:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+      VpcId: !Ref ProdVPC
+      AvailabilityZone: us-east-1c
+      CidrBlock: 10.50.3.0/24
+      MapPublicIpOnLaunch: true
+    
+  ProdPrivate1:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+      VpcId: !Ref ProdVPC
+      AvailabilityZone: us-east-1a
+      CidrBlock: 10.50.10.0/24
+      MapPublicIpOnLaunch: true
+    
+  ProdPrivate2:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+      VpcId: !Ref ProdVPC
+      AvailabilityZone: us-east-1b
+      CidrBlock: 10.50.20.0/24
+      MapPublicIpOnLaunch: true
+    
+  ProdPrivate3:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+      VpcId: !Ref ProdVPC
+      AvailabilityZone: us-east-1c
+      CidrBlock: 10.50.30.0/24
+      MapPublicIpOnLaunch: true
+      
+  StagingPublic1:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+      VpcId: !Ref StagingVPC
+      AvailabilityZone: us-east-1a
+      CidrBlock: 10.5.1.0/24
+      MapPublicIpOnLaunch: true
+    
+  StagingPublic2:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+      VpcId: !Ref StagingVPC
+      AvailabilityZone: us-east-1b
+      CidrBlock: 10.5.2.0/24
+      MapPublicIpOnLaunch: true
+    
+  StagingPublic3:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+      VpcId: !Ref StagingVPC
+      AvailabilityZone: us-east-1c
+      CidrBlock: 10.5.3.0/24
+      MapPublicIpOnLaunch: true
+    
+  StagingPrivate1:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+      VpcId: !Ref StagingVPC
+      AvailabilityZone: us-east-1a
+      CidrBlock: 10.5.10.0/24
+      MapPublicIpOnLaunch: true
+    
+  StagingPrivate2:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+      VpcId: !Ref StagingVPC
+      AvailabilityZone: us-east-1b
+      CidrBlock: 10.5.20.0/24
+      MapPublicIpOnLaunch: true
+    
+  StagingPrivate3:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+      VpcId: !Ref StagingVPC
+      AvailabilityZone: us-east-1c
+      CidrBlock: 10.5.30.0/24
+      MapPublicIpOnLaunch: true
