--- a/infrastructure/vpc/vpc.yaml
+++ b/infrastructure/vpc/vpc.yaml
@@ -172,3 +172,69 @@ Resources:
     Properties:
       RouteTableId: !Ref ProdRouteTable
       SubnetId: !Ref ProdPrivate3
+
+  StagingPublic1RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId: !Ref StagingRouteTable
+      SubnetId: !Ref StagingPublic1
+      
+  StagingPublic2RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId: !Ref StagingRouteTable
+      SubnetId: !Ref StagingPublic2
+      
+  StagingPublic3RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId: !Ref StagingRouteTable
+      SubnetId: !Ref StagingPublic3
+
+  StagingPrivate1RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId: !Ref StagingRouteTable
+      SubnetId: !Ref StagingPrivate1
+      
+  StagingPrivate2RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId: !Ref StagingRouteTable
+      SubnetId: !Ref StagingPrivate2
+      
+  StagingPrivate3RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId: !Ref StagingRouteTable
+      SubnetId: !Ref StagingPrivate3
+      
+  ProdSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupName: "Internet Group Production"
+      GroupDescription: "SSH traffic in, all traffic out."
+      VpcId: !Ref ProdVPC
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: '22'
+          ToPort: '22'
+          CidrIp: 0.0.0.0/0
+      SecurityGroupEgress:
+        - IpProtocol: -1
+          CidrIp: 0.0.0.0/0
+          
+  StagingSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupName: "Internet Group Staging"
+      GroupDescription: "SSH traffic in, all traffic out."
+      VpcId: !Ref StagingVPC
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: '22'
+          ToPort: '22'
+          CidrIp: 0.0.0.0/0
+      SecurityGroupEgress:
+        - IpProtocol: -1
+          CidrIp: 0.0.0.0/0
